--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+
 body {
     font-family: "Roboto";
+    font-size: 18px;
     text-align: center;
     padding-top: 10px;
+    margin: 0;
 }
 
 h1 {
@@ -10,38 +15,97 @@ h1 {
     font-size: 32px;
 }
 
+h2 {
+    margin-bottom: 5px;
+}
+
+h3 {
+    margin-bottom: 10px;
+}
+
+p {
+    display: inline;
+}
+
+a {
+    color: inherit;
+}
+
 table {
+    border-spacing: 50px 5px;
     margin-left: auto;
     margin-right: auto;
 }
 
-td {
-    border: 2px solid coral;
+button {
+    font-family: "Roboto Mono";
+    border: 3px solid;
+    border-radius: 8px;
+    font-size: 24px;
+    padding: 7px 15px;
+}
+
+.mono {
+    font-family: "Roboto Mono";
+}
+
+.left {
+    text-align: left;
+}
+
+.center {
+    text-align: center;
+}
+
+.right {
+    text-align: right;
+}
+
+.glow {
+    text-shadow: 0px 0px 10px rgb(129, 129, 189),
+        2px 2px 10px rgb(198, 198, 248),
+        -2px 2px 10px rgb(198, 198, 248),
+        2px -2px 10px rgb(198, 198, 248),
+        -2px -2px 10px rgb(198, 198, 248);
 }
 
 #content {
     background: #fffffff0;
     max-width: 960px;
+    min-height: 400px;
     border: rgb(123, 218, 255) 4px solid;
     box-shadow: 0 0 80px rgba(151, 207, 229, .7);
     padding: 10px;
     margin: auto;
+    margin-bottom: 10px;
 }
 
 #inputs {
     padding-left: 10px;
 }
 
+#footer {
+    color: #ffffffe5;
+    font-size: 12pt;
+    font-family: "Roboto Mono";
+    bottom: 0;
+    width: 100%;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+
 #bg {
-    position: absolute;
+    position: fixed;
+    bottom: 0px;
     left: 0px;
-    top: 0px;
     width: 100vw;
     height: 100vh;
-    z-index: -1;
-    /* d6e9ff */
-    background: url("img/bg.png") repeat;
+    background: url("images/bg.png") repeat;
     animation: bgMove 40s linear infinite;
+    overflow: auto;
+    z-index: -1;
 }
 
 @keyframes bgMove {
@@ -49,7 +113,6 @@ td {
         background-position: bottom left;
     }
 
-    /*the moving is there just very subtle*/
     to {
         background-position: top right;
     }
